# pandora_llm

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  reference.md  requirements.txt  the_pile_val.py
docs/: requirements.txt
docs/source/: conf.py  dir_tree.txt  index.rst  setup.rst
docs/source/extend/: classifiers.rst  data.rst  features.rst  index.rst  metrics.rst  models.rst  routines.rst
scripts/: examples.sh  run_mia_baselines_olmo.sh  run_mia_baselines_pile.sh
scripts/configs/: test.yaml
scripts/data_generation/: create_olmo_hf_data.py  create_pile_hf_data.py  load_pile_data.sh  wget_olmo_data.sh
src/pandora_llm/: __init__.py
src/pandora_llm/data/: Dolma.py  OLMo-7B-local.yaml  ThePile.py  __init__.py  create_olmo_data.py  pile_98_before_after_data.py
src/pandora_llm/data/base/: Dataset.py  utils.py
src/pandora_llm/features/: ALoRa.py  BERT.py  BoW.py  DCPDD.py  DetectGPT.py  GradNorm.py  JL.py  LOSS.py  LossRatio.py  LossZLIB.py  MinK.py  MinKXX.py  MoPe.py  ModelStealing.py  Quantile.py  ReCaLL.py  TFIDF.py  Word2Vec.py  ZLIB.py  __init__.py
src/pandora_llm/features/base/: FeatureComputer.py  FeatureSet.py  LLMHandler.py  __init__.py
src/pandora_llm/routines/: membership_inference.py  model_embedding.py  model_generation.py  model_inference.py  model_train.py
src/pandora_llm/utils/: extraction_utils.py  generation_utils.py  log_utils.py  plot_utils.py
