[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandora_llm"
version = "0.0.0"
description = "Red-teaming large language models for train data leakage"
authors = [
    {name = "Jeffrey Wang"},
    {name = "Jason Wang"},
    {name = "Marvin Li"},
    {name = "Seth Neel"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["red-teaming", "privacy", "large language model", "membership inference attack", "extraction"]
classifiers = [
  "Programming Language :: Python"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://safr-ai.quarto.pub/pandora/"
Documentation = "https://pandora-llm.readthedocs.io/en/latest/"
Repository = "https://github.com/safr-ai-lab/pandora-llm"

[project.scripts]
pandora-mia = "pandora_llm:membership_inference_entry_point"
